--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,2 +1,7 @@
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
+
 server.port=8080
+
 shareit-server.url=http://localhost:9090
+
+logging.level.ru.practicum.shareit=debug
