Локальные тесты новые + правки

--- a/server/src/test/resources/application.properties
+++ b/server/src/test/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.defer-datasource-initialization=true
 
 #
 spring.sql.init.mode=always
-spring.sql.init.data-locations=classpath:test-data.sql
+spring.sql.init.data-locations=classpath:schema.sql
 
 # Server
 server.port=9090
